--- a/index.html
+++ b/index.html
@@ -50,48 +50,48 @@
         <div class="flower-description">
             <img src="./assets/sample-flower-image.png" alt="">
             <h4 class="text-black-500 text-2xl text-center">Lily Blossom</h4>
-            <p class="text-2xl decoration-black-700 text-center">20 USD</p>
+            <p class="text-2xl decoration-black-700 text-center font-bold">20 USD</p>
             <button class= "w-67.5 h-12.5 bg-amber-400 m-2 p-1 gap-3 text-white font-medium">Add To Card</button>
         </div>
         <div class="flower-description">
             <img src="./assets/sample-flower-image.png" alt="">
             <h4 class="text-black-500 text-2xl text-center">Lily Blossom</h4>
-            <p class="text-2xl decoration-black-700 text-center">20 USD</p>
+            <p class="text-2xl decoration-black-700 text-center font-bold">20 USD</p>
         </div>
         <div class="flower-description">
             <img src="./assets/sample-flower-image.png" alt="">
             <h4 class="text-black-500 text-2xl text-center">Lily Blossom</h4>
-            <p class="text-2xl decoration-black-700 text-center">20 USD</p>
+            <p class="text-2xl decoration-black-700 text-center font-bold">20 USD</p>
             <button class= "w-67.5 h-12.5 bg-amber-400 m-2 p-1 gap-3 text-white font-medium">Add To Card</button>
         </div>
         <div class="flower-description">
             <img src="./assets/sample-flower-image.png" alt="">
             <h4 class="text-black-500 text-2xl text-center">Lily Blossom</h4>
-            <p class="text-2xl decoration-black-700 text-center">20 USD</p>
+            <p class="text-2xl decoration-black-700 text-center font-bold">20 USD</p>
             <button class= "w-67.5 h-12.5 bg-amber-400 m-2 p-1 gap-3 text-white font-medium">Add To Card</button>
         </div>
         <div class="flower-description">
             <img src="./assets/sample-flower-image.png" alt="">
             <h4 class="text-black-500 text-2xl text-center">Lily Blossom</h4>
-            <p class="text-2xl decoration-black-700 text-center">20 USD</p>
+            <p class="text-2xl decoration-black-700 text-center font-bold">20 USD</p>
             <button class= "w-67.5 h-12.5 bg-amber-400 m-2 p-1 gap-3 text-white font-medium">Add To Card</button>
         </div>
         <div class="flower-description">
             <img src="./assets/sample-flower-image.png" alt="">
             <h4 class="text-black-500 text-2xl text-center">Lily Blossom</h4>
-            <p class="text-2xl decoration-black-700 text-center">20 USD</p>
+            <p class="text-2xl decoration-black-700 text-center font-bold">20 USD</p>
             <button class= "w-67.5 h-12.5 bg-amber-400 m-2 p-1 gap-3 text-white font-medium">Add To Card</button>
         </div>
         <div class="flower-description">
             <img src="./assets/sample-flower-image.png" alt="">
             <h4 class="text-black-500 text-2xl text-center">Lily Blossom</h4>
-            <p class="text-2xl decoration-black-700 text-center">20 USD</p>
+            <p class="text-2xl decoration-black-700 text-center font-bold">20 USD</p>
             <button class= "w-67.5 h-12.5 bg-amber-400 m-2 p-1 gap-3 text-white font-medium">Add To Card</button>
         </div>
         <div class="flower-description">
             <img src="./assets/sample-flower-image.png" alt="">
             <h4 class="text-black-500 text-2xl text-center">Lily Blossom</h4>
-            <p class="text-2xl decoration-black-700 text-center">20 USD</p>
+            <p class="text-2xl decoration-black-700 text-center font-bold">20 USD</p>
             <button class= "w-67.5 h-12.5 bg-amber-400 m-2 p-1 gap-3 text-white font-medium">Add To Card</button>
         </div>
     </div>
