--- a/index.html
+++ b/index.html
@@ -96,21 +96,21 @@
         </div>
     </div>
 </section>
-<section>
+<section class="m-35 p-10">
     <!-- Flower and Plants lover setion -->
-     <div>
-        <img src="./assets/trusted-badge.png" alt="">
+     <div class="border-2 ">
+        <img class="w-50 h-50" src="./assets/trusted-badge.png" alt="">
      </div>
-     <div class="grid grid-cols-2">
+     <div class="grid grid-cols-2 border-amber-100 gap-4">
         
 
         <div class="flower-image">
         <img src="./assets/flower-store.png" alt="">
         
         </div>
-        <div class="lover">
-        <ul>
-            <li class="mx-5">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+        <div class="lover ">
+        <ul class="grid grid-cols-1 gap-x-3">
+            <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
             <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
             <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
         </ul>
