--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
      <div class="border-2 ">
         <img class="w-50 h-50" src="./assets/trusted-badge.png" alt="">
      </div>
-     <div class="grid grid-cols-2 border-amber-100 gap-4">
+     <div class="grid grid-cols-2 gap-4">
         
 
         <div class="flower-image">
