--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
         </div>
     </div>
 </section>
-<section class="m-35 p-10">
+<section class="mt-10 mb-35 mr-35 ml-35 p-10">
     <!-- Flower and Plants lover setion -->
-     <div class="border-2 ">
+     <div class="items-center">
         <img class="w-50 h-50" src="./assets/trusted-badge.png" alt="">
      </div>
      <div class="grid grid-cols-2 gap-4">
@@ -121,7 +121,10 @@
     </header>
 
     <main>
-
+<div class="m-20">
+    <h1 class="text-3xl font-bold text-center"><span class="text-amber-700">Latest</span> Deals</h1>
+    <p class="text-center">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+</div>
     </main>
     <footer>
         
