update bounch part

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         justify-content: center;
         text-align: center;
 }
+
 .right-side{
     position: relative;
     top: 20px;
@@ -71,9 +72,12 @@
 
 }
 .right-image{
+    max-width: 1000px;
     position: absolute;
     bottom: 10px;
     left: 20px;
+    align-items: center;
+    text-align: center;
 }
 .joint-header{
     font-size: 3rem;
@@ -248,7 +252,7 @@
 
 }            <div class="bloom-plant">30% off | Ana Plant <br>Shop now</div>
             <figure>
-                <img src="./assets/deal-bloom.png" alt="">
+                <img src="./assets/deal-bloom.png" alt="" style="width: 100%;">
          
             </figure>
             <div class="ana-plant">30% off | Ana Plant <br>shop now</div>
@@ -259,7 +263,7 @@
         <div class="right-side">
             <div class="righr-image">25% of | Zabo Plant <br>Shop now</div>
             <figure>
-                <img src="./assets/deal-zabo.png" alt="">
+                <img src="./assets/deal-zabo.png" alt=""    style="width: 100%;">
             </figure>
             
         </div>
