--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
         padding: 300px;
         background-color: blanchedalmond;
     }
+    .hero-flower{
+        max-width: 570px;
+        max-height: 370px;
+
+    }
+    .badge{
+        position:absolute;
+        width: 300px;
+        height: 300px;
+        left: 50%;
+        top: 100%;
+        transform: translate(-90%, 90%);
+    }
     .container{
         display: flex;
         gap: 20px;
@@ -116,12 +129,12 @@
 </style>
 <body>
     <header>
-       <nav class="flex flex-row items-center justify-between h-6 text-sm pl-5 pr-5 bg-green-300">
+       <nav class="flex flex-row items-center justify-between h-20 text-3xl pl-2 pr-2 m-10 bg-amber-300">
         <div class="">
-            <img class="w-8" src="./assets/logo.png" alt="">
+            <img class="w-30 h-20" src="./assets/logo.png" alt="">
         </div>
         <div class="flex">
-            <ul class="flex items-center gap-[4vw] text-sm">
+            <ul class="flex items-center gap-[4vw] text-4xl font-bold text-blue-700">
                 <li>Home</li>
                 <li>Shop</li>
                 <li>About Us</li>
@@ -135,14 +148,14 @@
         </div>
        </nav>
         <!-- Flowe section -->
-<section class="grid grid-cols-2 m-2 p-4">
+<section class=" grid grid-cols-2 m-2 p-4 gap-11">
     <div class="fresh">
-        <h1 class="">ALWAYS <span class="text-orange-400">FRESH</span></h1>
-        <h1 class="text-orange-600 text-bold">FLOWERS</h1>
-        <p class="text-sm">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion.</p>
+        <h1 class="text-7xl">ALWAYS <span class="text-orange-400">FRESH</span></h1>
+        <h1 class="text-7xl text-orange-600 text-bold">FLOWERS</h1>
+        <p class="text-2xl color: rgba(0, 0, 0, 0.5)">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion.</p>
     </div>
     <div>
-<img src="./assets/hero-flower.png" alt="">
+<img class="hero-flower " src="./assets/hero-flower.png" alt="">
     </div>
 </section>
 <section>
@@ -205,7 +218,7 @@
 <section class="mt-10 mb-35 mr-35 ml-35 p-10">
     <!-- Flower and Plants lover setion -->
      <div class="items-center">
-        <img class="w-50 h-50" src="./assets/trusted-badge.png" alt="">
+        <img class="badge w-50 h-50" src="./assets/trusted-badge.png" alt="">
      </div>
      <div class="grid grid-cols-2 gap-4">
         
