badge shadow added

--- a/indexa.html
+++ b/indexa.html
@@ -11,8 +11,8 @@
 
     </header>
     <main>
-<section class="display-flex flower-container container">
-    <div>
+<section class="display-flex flower-container container section-gap">
+    <div class="image-container">
         <img src="./assets/flower-store.png" alt="">
         <img class="badge" src="./assets/trusted-badge.png" alt="">
     </div>
