--- a/indexa.html
+++ b/indexa.html
@@ -13,7 +13,7 @@
     <main>
 <section class="display-flex flower-container container section-gap">
     <div class="image-container">
-        <img src="./assets/flower-store.png" alt="">
+        <img class="store" src="./assets/flower-store.png" alt="">
         <img class="badge" src="./assets/trusted-badge.png" alt="">
     </div>
     <div>
@@ -24,6 +24,34 @@
             <li class="paragraph list-item">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
         </ul>
     </div>
+</section>
+<section class="container section-gap">
+    <div class="display-flex deals-heading">
+        <h2 class="heading font-noto"><span class="span-text">Latest</span> Deals</h2>
+    <p class="paragraph font-inter">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br>classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+    </div>
+    <div class="card-container">
+        <div class="card bloom">
+            <h2 class="font-noto">60% Off | Bloom Plant</h2>
+            <span lang="font-inter">Shop now</span>
+        </div>
+        <div class="card ana">
+             <h2 class="font-noto">30% Off | ana-plant</h2>
+            <span class="font-inter">Shop now</span>
+        </div>
+        <div class="card zabo">
+             <h2 class="font-noto">25% Off | Zabo Plant</h2>
+            <span class="font-inter">Shop now</span>
+        </div>
+    </div>
+</section>
+<section class="section-gap newsletter-section">
+    <h2 class="heading font-noto">Join the colorful Bunch</h2>
+    <form action="" class="submission-box">
+      <input type="email" name="" id="" placeholder="Write email">
+      <button>Subscribe</button>
+    </form>
+   
 </section>
     </main>
     <footer>
